introduce swagger for posts
